# Market

./: .env.example  README.md  app.py  direct_print.py  excel_utils.py  market_system.db  models.py  print_utils.py  pyproject.toml  replit.md  requirements.txt  routes.py  utils.py
instance/: market_system.db
static/css/: style.css  styles.css
static/js/: main.js
static/samples/: sample_products.xlsx
templates/: add_product.html  base.html  dashboard.html  edit_product.html  import_excel.html  login.html  print_setup.html  product_form.html  products.html  qr_sales.html  qr_scanner.html  reports.html  sales.html
utils/: db.py  printer.py
